--- a/templates/header.html
+++ b/templates/header.html
@@ -83,7 +83,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <!-- Link to Clothes Category Page -->
-                        <a class="dropdown-item" href="{% url 'category_page' 'clothes' %}">Clothes</a>
+                        
                         <div class="dropdown-divider"></div>
                         
                         <!-- Link to Fashion Category Page -->
@@ -93,7 +93,13 @@
                         
                         <!-- Link to Accessories Category Page -->
                         <a class="dropdown-item" href="{% url 'category_page' 'electronics' %}">Electronics</a>
+
+                        <div class="dropdown-divider"></div>
+                        
+                        <!-- Link to Accessories Category Page -->
+                        <a class="dropdown-item" href="{% url 'category_page' 'electronics' %}">Electronics</a>
                     </div>
+                    
                 </li>
                 
             </ul>
