clean code optimize

--- a/templates/index.html
+++ b/templates/index.html
@@ -90,9 +90,9 @@
     <div class="container">
         <h1>Product List</h1>
         <div class="product-category mb-5">
-            <h2>Women Bages</h2>
+            <h2>Women Bags</h2>
             <div class="row">
-                {% for product in products_by_category.bages %}
+                {% for product in products_by_category.bags %}
                     <div class="col-md-4 mb-4">
                         <div class="product-card">
                             {% if product.image %}
@@ -121,7 +121,7 @@
                 {% endfor %}
             </div>
             <div class="text-end">
-                <a href="{% url 'category_page' 'bages' %}" class="btn btn-primary">Show More</a>
+                <a href="{% url 'category_page' 'bags' %}" class="btn btn-primary">Show More</a>
             </div>
         </div>
         
@@ -248,7 +248,7 @@
     </div>
    
 
-<a href="https://wa.me/+923044749914" class="whatsapp-button" target="_blank">
+<a href="https://wa.me/+923404347000" class="whatsapp-button" target="_blank">
   <img src="/static/images/vecteezy_whatsapp-logo-png-whatsapp-icon-png-whatsapp-transparent_18930748.png" alt="WhatsApp">
 </a>
 
