--- a/templates/footer.html
+++ b/templates/footer.html
@@ -171,19 +171,19 @@
             <div class="footer-col3">
                 <h4>Online Shop</h4>
                 <ul id="un-order">
-                    <li><a href="#">Watch</a></li>
-                    <li><a href="#">Bag</a></li>
-                    <li><a href="#">Shoes</a></li>
-                    <li><a href="#">Dress</a></li>
+                    <li><a href="#">Women Bags</a></li>
+                    <li><a href="#">Jewellery</a></li>
+                    <li><a href="#">Electronics</a></li>
+                    <li><a href="#">Fashion</a></li>
                 </ul>
             </div>
             <div class="footer-col3">
                 <h4>Follow Us</h4>
                 <div class="social-links5">
-                    <a href=""><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.facebook.com/marketplace/profile/100009595756354/?ref=permalink&mibextid=dXMIcH"><i class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/muhammad-tayyab-king/"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://wa.me/+923404347000"><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
         </div>
