--- a/templates/header.html
+++ b/templates/header.html
@@ -83,6 +83,11 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <!-- Link to Clothes Category Page -->
+
+                        <div class="dropdown-divider"></div>
+                        
+                        <!-- Link to Fashion Category Page -->
+                        <a class="dropdown-item" href="{% url 'category_page' 'bags' %}">Bags</a>
                         
                         <div class="dropdown-divider"></div>
                         
@@ -92,7 +97,7 @@
                         <div class="dropdown-divider"></div>
                         
                         <!-- Link to Accessories Category Page -->
-                        <a class="dropdown-item" href="{% url 'category_page' 'electronics' %}">Electronics</a>
+                        <a class="dropdown-item" href="{% url 'category_page' 'jewellery' %}">Jewellery</a>
 
                         <div class="dropdown-divider"></div>
                         
