--- a/templates/base/scripts.html
+++ b/templates/base/scripts.html
@@ -19,6 +19,7 @@
 <script src="{% static 'assets/js/slick.js' %}"></script>
 <script src="{% static 'assets/js/lightbox.js' %}"></script>
 <script src="{% static 'assets/js/isotope.js' %}"></script>
+<!-- <script src="{% static 'assets/js/quantity.js' %}"></script> -->
 
 <!-- Global Init -->
 <script src="{% static 'assets/js/custom.js' %}"></script>
