--- a/templates/components/products.html
+++ b/templates/components/products.html
@@ -38,8 +38,9 @@
                             <div class="thumb">
                                 <div class="hover-content">
                                     <ul>
-                                        <li><a href="single-product.html"><i class="fa fa-eye"></i></a></li>
-                                        <li><a href="single-product.html"><i class="fa fa-star"></i></a></li>
+                                        <li><a href="{% url 'product_detail' item.id  %}"><i class="fa fa-eye"></i></a>
+                                        </li>
+                                        <!-- <li><a href="single-product.html"><i class="fa fa-star"></i></a></li> -->
                                         <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                     </ul>
                                 </div>
