--- a/templates/components/auth.html
+++ b/templates/components/auth.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    {% include 'base/alert-message.html' %}
     <div class="container">
         <input type="checkbox" id="flip">
         <div class="cover">
