--- a/templates/base/layout.html
+++ b/templates/base/layout.html
@@ -33,6 +33,9 @@
             <div></div>
         </div>
     </div>
+
+    {% include 'base/alert-message.html' %}
+
     <!--=========== Navigation ==========-->
     {% include 'base/navigation-bar.html' %}
 
