--- a/templates/base/navigation-bar.html
+++ b/templates/base/navigation-bar.html
@@ -3,7 +3,7 @@
 <header class="header-area header-sticky">
     <div class="container">
         <div class="row">
-            <div class="col-12">
+            <div class="col-10">
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
@@ -23,13 +23,28 @@
                             </ul>
                         </li>
                         {% endfor %}
+                        <!-- HTML !-->
+
                         <!-- <li class="scroll-to-section"><a href="#explore">Explore</a></li> -->
                     </ul>
+
+
                     <a class='menu-trigger'>
                         <span>Menu</span>
                     </a>
                     <!-- ***** Menu End ***** -->
                 </nav>
+            </div>
+            <div class="col-2  d-flex align-items-center">
+                <li style="height:fit-content">
+                    {% if user.is_authenticated %}
+                    <a href="{% url 'user_cart' %}" class="btn btn-primary">Cart</a>
+                    <a href="{% url 'logout' %}" class="btn btn-dark">Logout</a>
+                    {% else %}
+                    <a href="{% url 'auth' 'login' %}" class="btn btn-primary">Login </a>
+                    <a href="{% url 'auth' 'signup' %}" class="btn btn-dark">Sign up</a>
+                    {% endif %}
+                </li>
             </div>
         </div>
     </div>
