--- a/templates/components/landing-page.html
+++ b/templates/components/landing-page.html
@@ -88,7 +88,7 @@
                             <div class="thumb">
                                 <div class="hover-content">
                                     <ul>
-                                        <li><a href="{% url 'product-detail' item.id %}"><i class="fa fa-eye"></i></a>
+                                        <li><a href="{% url 'product_detail' item.id %}"><i class="fa fa-eye"></i></a>
                                         </li>
                                         <!-- <li><a href="single-product.html"><i class="fa fa-star"></i></a></li> -->
                                         <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
