--- a/templates/base/navigation-bar.html
+++ b/templates/base/navigation-bar.html
@@ -26,10 +26,10 @@
                           {% if user.is_authenticated %}
                     <li class="scroll-to-section"><a href="{% url 'user_cart' %}" >Cart</a></li>
                         
-                    <li class="scroll-to-section"><a href="{% url 'logout' %}" class="btn btn-dark">Logout</a></li>
+                    <li class="scroll-to-section"><a href="{% url 'logout' %}" >Logout</a></li>
                     {% else %}
-                   <li class="scroll-to-section"> <a href="{% url 'auth' 'login' %}" class="btn btn-primary">Login </a></li>
-                   <li class="scroll-to-section"> <a href="{% url 'auth' 'signup' %}" class="btn btn-dark">Sign up</a></li>
+                   <li class="scroll-to-section"> <a href="{% url 'auth' 'login' %}" >Login </a></li>
+                   <li class="scroll-to-section"> <a href="{% url 'auth' 'signup' %}">Sign up</a></li>
                     {% endif %}
 
 
