--- a/templates/base/navigation-bar.html
+++ b/templates/base/navigation-bar.html
@@ -24,6 +24,14 @@
                         </li>
                         {% endfor %}
                         <!-- HTML !-->
+                        {% if user.is_authenticated %}
+                        <li class="scroll-to-section"><a href="{% url 'user_cart' %}" class="btn btn-primary">Cart</a></li>
+                        <li class="scroll-to-section"><a href="{% url 'logout' %}" class="btn btn-dark">Logout</a></li>
+                        
+                        {% else %}
+                        <li class="scroll-to-section"><a href="{% url 'auth' 'login' %}" class="btn btn-primary">Login </a></li>
+                        <li class="scroll-to-section"><a href="{% url 'auth' 'signup' %}" class="btn btn-dark">Sign up</a></li>
+                        {% endif %}
 
                         <!-- <li class="scroll-to-section"><a href="#explore">Explore</a></li> -->
                     </ul>
@@ -34,17 +42,6 @@
                     </a>
                     <!-- ***** Menu End ***** -->
                 </nav>
-            </div>
-            <div class="col-2  d-flex align-items-center">
-                <li style="height:fit-content">
-                    {% if user.is_authenticated %}
-                    <a href="{% url 'user_cart' %}" class="btn btn-primary">Cart</a>
-                    <a href="{% url 'logout' %}" class="btn btn-dark">Logout</a>
-                    {% else %}
-                    <a href="{% url 'auth' 'login' %}" class="btn btn-primary">Login </a>
-                    <a href="{% url 'auth' 'signup' %}" class="btn btn-dark">Sign up</a>
-                    {% endif %}
-                </li>
             </div>
         </div>
     </div>
